--- a/src/view/all.html
+++ b/src/view/all.html
@@ -5,169 +5,173 @@
   <title><%= htmlWebpackPlugin.options.title%></title>
 </head>
 <body>
-  <div class="all-top-wrapper">
-    <div class="content clearfix">
-      <div class="pull-left avatar">
-        <img src="<%= require('../image/avatar.png') %>" alt="" class="">
-      </div>
-      <div class="detail pull-left">
-        <p class="company-name text-overflow">保姆公司</p>
-        <div class="info text-overflow">
-          <span class="text">家政人员数量</span>
-          <span class="number">11</span>
-          <span class="text">关注人数</span>
-          <span class="number">11</span>
+  <div class="base4-wrap">
+    <div class="all-top-wrapper">
+      <div class="content clearfix">
+        <div class="pull-left avatar">
+          <img src="<%= require('../image/avatar.png') %>" alt="" class="">
         </div>
-        <div class="focus text-center">关注</div>
+        <div class="detail pull-left">
+          <p class="company-name text-overflow">保姆公司</p>
+          <div class="info text-overflow">
+            <span class="text">家政人员数量</span>
+            <span class="number">11</span>
+            <span class="text">关注人数</span>
+            <span class="number">11</span>
+          </div>
+          <div class="focus text-center">关注</div>
+        </div>
+      </div>
+      <p class="desc">家政家政家政家政家政家政家政家政家政家政家政家政家政家政家政</p>
+    </div>
+    <div class="center-content all-center-content">
+      <!-- 推荐阿姨 -->
+      <div class="recommend-aunts all-recommend-aunts">
+        <p class="title">推荐阿姨</p>
+        <div class="aunts-list">
+          <a href="#" class="item clearfix">
+            <!-- <img class="lazyload pull-left img" data-src="<%= require('../image/avatar.png') %>" width="75" height="100"> -->
+            <img src="<%= require('../image/avatar.png') %>" alt="" class="pull-left img">
+            <div class="content pull-left">
+              <div class="info">
+                <span class="name">李阿姨</span>
+                <span class="star star1"></span>
+                <span class="status">空挡</span>
+                <span class="money">4000/月</span>
+              </div>
+              <div class="detail clearfix">
+                <span>47岁</span>
+                <span>舟山人</span>
+                <span>高中</span>
+                <span>1年经验</span>
+              </div>
+              <div class="boxes clearfix">
+                <span class="small-box">1年经验</span>
+                <span class="small-box">舟山人</span>
+                <span class="small-box">高中</span>
+              </div>
+            </div>
+          </a>
+          <a href="#" class="item clearfix">
+            <img src="<%= require('../image/avatar.png') %>" alt="" class="pull-left img">
+            <div class="content pull-left">
+              <div class="info">
+                <span class="name">李阿姨</span>
+                <span class="star star2"></span>
+                <span class="status active">上岗中</span>
+                <span class="money">4000/月</span>
+              </div>
+              <div class="detail clearfix">
+                <span>47岁</span>
+                <span>舟山人</span>
+                <span>高中</span>
+                <span>1年经验</span>
+              </div>
+              <div class="boxes clearfix">
+                <span class="small-box">1年经验</span>
+                <span class="small-box">舟山人</span>
+                <span class="small-box">高中</span>
+              </div>
+            </div>
+          </a>
+          <a href="#" class="item clearfix">
+            <img src="<%= require('../image/avatar.png') %>" alt="" class="pull-left img">
+            <div class="content pull-left">
+              <div class="info">
+                <span class="name">李阿姨</span>
+                <span class="star star3"></span>
+                <span class="status active">上岗中</span>
+                <span class="money">4000/月</span>
+              </div>
+              <div class="detail clearfix">
+                <span>47岁</span>
+                <span>舟山人</span>
+                <span>高中</span>
+                <span>1年经验</span>
+              </div>
+              <div class="boxes clearfix">
+                <span class="small-box">1年经验</span>
+                <span class="small-box">舟山人</span>
+                <span class="small-box">高中</span>
+              </div>
+            </div>
+          </a>
+          <a href="#" class="item clearfix">
+            <img src="<%= require('../image/avatar.png') %>" alt="" class="pull-left img">
+            <div class="content pull-left">
+              <div class="info">
+                <span class="name">李阿姨</span>
+                <span class="star star4"></span>
+                <span class="status active">上岗中</span>
+                <span class="money">4000/月</span>
+              </div>
+              <div class="detail clearfix">
+                <span>47岁</span>
+                <span>舟山人</span>
+                <span>高中</span>
+                <span>1年经验</span>
+              </div>
+              <div class="boxes clearfix">
+                <span class="small-box">1年经验</span>
+                <span class="small-box">舟山人</span>
+                <span class="small-box">高中</span>
+              </div>
+            </div>
+          </a>
+          <a href="#" class="item clearfix">
+            <img src="<%= require('../image/avatar.png') %>" alt="" class="pull-left img">
+            <div class="content pull-left">
+              <div class="info">
+                <span class="name">李阿姨</span>
+                <span class="star star5"></span>
+                <span class="status active">上岗中</span>
+                <span class="money">4000/月</span>
+              </div>
+              <div class="detail clearfix">
+                <span>47岁</span>
+                <span>舟山人</span>
+                <span>高中</span>
+                <span>1年经验</span>
+              </div>
+              <div class="boxes clearfix">
+                <span class="small-box">1年经验</span>
+                <span class="small-box">舟山人</span>
+                <span class="small-box">高中</span>
+              </div>
+            </div>
+          </a>
+          <a href="#" class="item clearfix">
+            <img src="<%= require('../image/avatar.png') %>" alt="" class="pull-left img">
+            <div class="content pull-left">
+              <div class="info">
+                <span class="name">李阿姨</span>
+                <span class="star star5"></span>
+                <span class="status active">上岗中</span>
+                <span class="money">4000/月</span>
+              </div>
+              <div class="detail clearfix">
+                <span>47岁</span>
+                <span>舟山人</span>
+                <span>高中</span>
+                <span>1年经验</span>
+              </div>
+              <div class="boxes clearfix">
+                <span class="small-box">1年经验</span>
+                <span class="small-box">舟山人</span>
+                <span class="small-box">高中</span>
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="underline">
+         <!--  <span class="line"></span>
+         <span class="text text-center">我也是有底线</span> -->
+        </div>
       </div>
     </div>
-    <p class="desc">家政家政家政家政家政家政家政家政家政家政家政家政家政家政家政</p>
   </div>
-  <div class="center-content all-center-content">
-    <!-- 推荐阿姨 -->
-    <div class="recommend-aunts all-recommend-aunts">
-      <p class="title">推荐阿姨</p>
-      <div class="aunts-list">
-        <a href="#" class="item clearfix">
-          <!-- <img class="lazyload pull-left img" data-src="<%= require('../image/avatar.png') %>" width="75" height="100"> -->
-          <img src="<%= require('../image/avatar.png') %>" alt="" class="pull-left img">
-          <div class="content pull-left">
-            <div class="info">
-              <span class="name">李阿姨</span>
-              <span class="star star1"></span>
-              <span class="status">空挡</span>
-              <span class="money">4000/月</span>
-            </div>
-            <div class="detail clearfix">
-              <span>47岁</span>
-              <span>舟山人</span>
-              <span>高中</span>
-              <span>1年经验</span>
-            </div>
-            <div class="boxes clearfix">
-              <span class="small-box">1年经验</span>
-              <span class="small-box">舟山人</span>
-              <span class="small-box">高中</span>
-            </div>
-          </div>
-        </a>
-        <a href="#" class="item clearfix">
-          <img src="<%= require('../image/avatar.png') %>" alt="" class="pull-left img">
-          <div class="content pull-left">
-            <div class="info">
-              <span class="name">李阿姨</span>
-              <span class="star star2"></span>
-              <span class="status active">上岗中</span>
-              <span class="money">4000/月</span>
-            </div>
-            <div class="detail clearfix">
-              <span>47岁</span>
-              <span>舟山人</span>
-              <span>高中</span>
-              <span>1年经验</span>
-            </div>
-            <div class="boxes clearfix">
-              <span class="small-box">1年经验</span>
-              <span class="small-box">舟山人</span>
-              <span class="small-box">高中</span>
-            </div>
-          </div>
-        </a>
-        <a href="#" class="item clearfix">
-          <img src="<%= require('../image/avatar.png') %>" alt="" class="pull-left img">
-          <div class="content pull-left">
-            <div class="info">
-              <span class="name">李阿姨</span>
-              <span class="star star3"></span>
-              <span class="status active">上岗中</span>
-              <span class="money">4000/月</span>
-            </div>
-            <div class="detail clearfix">
-              <span>47岁</span>
-              <span>舟山人</span>
-              <span>高中</span>
-              <span>1年经验</span>
-            </div>
-            <div class="boxes clearfix">
-              <span class="small-box">1年经验</span>
-              <span class="small-box">舟山人</span>
-              <span class="small-box">高中</span>
-            </div>
-          </div>
-        </a>
-        <a href="#" class="item clearfix">
-          <img src="<%= require('../image/avatar.png') %>" alt="" class="pull-left img">
-          <div class="content pull-left">
-            <div class="info">
-              <span class="name">李阿姨</span>
-              <span class="star star4"></span>
-              <span class="status active">上岗中</span>
-              <span class="money">4000/月</span>
-            </div>
-            <div class="detail clearfix">
-              <span>47岁</span>
-              <span>舟山人</span>
-              <span>高中</span>
-              <span>1年经验</span>
-            </div>
-            <div class="boxes clearfix">
-              <span class="small-box">1年经验</span>
-              <span class="small-box">舟山人</span>
-              <span class="small-box">高中</span>
-            </div>
-          </div>
-        </a>
-        <a href="#" class="item clearfix">
-          <img src="<%= require('../image/avatar.png') %>" alt="" class="pull-left img">
-          <div class="content pull-left">
-            <div class="info">
-              <span class="name">李阿姨</span>
-              <span class="star star5"></span>
-              <span class="status active">上岗中</span>
-              <span class="money">4000/月</span>
-            </div>
-            <div class="detail clearfix">
-              <span>47岁</span>
-              <span>舟山人</span>
-              <span>高中</span>
-              <span>1年经验</span>
-            </div>
-            <div class="boxes clearfix">
-              <span class="small-box">1年经验</span>
-              <span class="small-box">舟山人</span>
-              <span class="small-box">高中</span>
-            </div>
-          </div>
-        </a>
-        <a href="#" class="item clearfix">
-          <img src="<%= require('../image/avatar.png') %>" alt="" class="pull-left img">
-          <div class="content pull-left">
-            <div class="info">
-              <span class="name">李阿姨</span>
-              <span class="star star5"></span>
-              <span class="status active">上岗中</span>
-              <span class="money">4000/月</span>
-            </div>
-            <div class="detail clearfix">
-              <span>47岁</span>
-              <span>舟山人</span>
-              <span>高中</span>
-              <span>1年经验</span>
-            </div>
-            <div class="boxes clearfix">
-              <span class="small-box">1年经验</span>
-              <span class="small-box">舟山人</span>
-              <span class="small-box">高中</span>
-            </div>
-          </div>
-        </a>
-      </div>
-      <div class="underline">
-       <!--  <span class="line"></span>
-       <span class="text text-center">我也是有底线</span> -->
-      </div>
-    </div>
-  </div>
+
+  <%= require('html-loader!./layout/userFooter.html') %>
   <%= require('html-loader!./layout/footer1.html') %>
   
 </body>
