--- a/src/view/list.html
+++ b/src/view/list.html
@@ -14,7 +14,7 @@
     </div>
   </div>
   <%= require('html-loader!./layout/sort.html') %>
-  <div class="center-content center-content-list">
+  <div class="center-content center-content-list base3-wrap">
     <!-- 推荐阿姨 -->
     <div class="recommend-aunts recommend-aunts-lists">
       <div class="aunts-list">
