--- a/src/view/userCenter.html
+++ b/src/view/userCenter.html
@@ -5,7 +5,7 @@
   <title><%= htmlWebpackPlugin.options.title%></title>
 </head>
 <body>
-  <div class="top top-wrap top-green">
+  <div class="top top-wrap top-green mb0">
     <a class="back" href="javascript:void(0);" onclick="window.history.back()"></a>
     <h2 class="text-center">个人中心</h2>
     <a href="javascript:void(0);" class="logout">退出登录</a>
