--- a/src/view/all.html
+++ b/src/view/all.html
@@ -14,10 +14,14 @@
         <div class="detail pull-left">
           <p class="company-name text-overflow">保姆公司</p>
           <div class="info text-overflow">
-            <span class="text">家政人员数量</span>
-            <span class="number">11</span>
-            <span class="text">关注人数</span>
-            <span class="number">11</span>
+            <span class="cont">
+              <span class="text">家政人员数量</span>
+              <span class="number">11</span>
+            </span>
+            <span class="cont">
+              <span class="text">关注人数</span>
+              <span class="number">11</span>
+            </span>
           </div>
           <div class="focus text-center">关注</div>
         </div>
