--- a/src/view/layout/sort.html
+++ b/src/view/layout/sort.html
@@ -1,16 +1,24 @@
 <div class="sort-wrap">
   <div class="sort-list clearfix">
     <div class="item col-xs-3 text-center">
-      <span>排序</span>
+      <div class="row">
+        <span>排序</span>
+      </div>
     </div>
     <div class="item col-xs-3 text-center">
-      <span>类型</span>
+      <div class="row">
+        <span>类型</span>
+      </div>
     </div>
     <div class="item col-xs-3 text-center">
-      <span>价格</span>
+      <div class="row">
+        <span>价格</span>
+      </div>
     </div>
     <div class="item col-xs-3 text-center">
-      <span>筛选</span>
+      <div class="row">
+        <span>筛选</span>
+      </div>
     </div>
   </div>
   <div class="type-list clearfix">
