--- a/src/page/common/common.scss
+++ b/src/page/common/common.scss
@@ -2,7 +2,7 @@
 * @Author: kai
 * @Date:   2017-11-14 20:05:55
 * @Last Modified by:   kai
-* @Last Modified time: 2017-12-04 19:41:38
+* @Last Modified time: 2017-12-05 20:16:44
 */
 $green: #3dbd95;
 $grey: #f0f0f0;
@@ -1887,19 +1887,160 @@ a:hover, a:focus, a:active {
 .rel {
   position: relative;
 }
-
-@media (max-width: 360px) {
-
+.dn {
+  display: none;
 }
+
+
+@media (max-width: 375px) {
+  .recommend-aunts {
+    .aunts-list {
+      .content .name {
+        font-size: 1em;
+      }
+      .item {
+        .info {
+          .money {
+            font-size: 1em;
+            right: -5px;
+          }
+          .status {
+            font-size: .875em;
+          }
+        }
+      }
+    }
+  }
+  .search-wrapper {
+    height: 60px;
+    padding: 10px 20px;
+  }
+  .user-footer {
+    height: 60px;
+  }
+  .base1-wrap {
+    height: calc(100vh - 121px);
+  }
+  .base-wrap {
+    height: calc(100vh - 116px);
+  }
+  .base3-wrap {
+    bottom: 60px;
+  }
+  .base4-wrap {
+    height: calc(100vh - 60px);
+  }
+  .search-wrapper {
+    .search-container {
+      padding-top: 10px;
+      padding-bottom: 10px;
+    }
+    &.search-type-two {
+      &.search-type-three {
+        bottom: calc(100% - 60px);
+      }
+      .cancle {
+        font-size: 1.1em;
+      }
+      .back {
+        top: 15px;
+      }
+    }
+  }
+  .sort-wrap {
+    top: 61px;
+    .shadow-wrap {
+      height: calc(100vh - 165px);
+      .type-wrap .item {
+        font-size: .875em;
+      }
+      .choose-type {
+        .title {
+          font-size: 1em;
+          padding-top: 10px;
+        }
+        .item-sort .box {
+          font-size: .875em;
+        }
+      } 
+    }
+  }
+  .btn-list-cancle, .btn-list-ok {
+    font-size: 1em;
+  }
+  .sort-wrap .sort-list .item span {
+    background-position: 48px 16px;
+  }
+  .all-top-wrapper .content .detail {
+    .number {
+      margin: 0 5px;
+    }
+    .cont {
+      display: block;
+    }
+    .cont:first-child {
+      margin-bottom: 5px;
+    }
+    .company-name {
+      font-size: 1.2em;
+    }
+  }
+  .top-wrap {
+    h2 {
+      font-size: 1.3em;
+    }
+  }
+  .my .swiper-my .swiper-pagination .swiper-pagination-bullet {
+    font-size: 1em;
+  }
+  .my .cancle .btn {
+    padding: 2px 20px;
+  }
+  .my .swiper-my .swiper-wrapper {
+    height: calc(100vh - 166px);
+  }
+  .my .server-list .item .info .name {
+    font-size: 1.1em;
+  }
+}
+
 @media (max-width: 320px) {
+  .recommend-aunts {
+    .aunts-list {
+      .item {
+        .info {
+          .money {
+            top: 25px;
+            left: 0;
+          }
+        }
+        .detail {
+          font-size: .875em;
+          margin-top: 25px;
+          margin-bottom: 5px;
+        }
+        .boxes .small-box {
+          font-size: .875em;
+        }
+      }
+    }
+   .underline .text {
+    font-size: .875em;
+   }
+  }   
   .function {
     .function-list {
       .item {
-        font-size: 0.75em;
-      }
+        font-size: 0.75em; 
+      } 
     }
   }
   .sort-wrap .sort-list .item span {
     font-size: .875em;
   }
+  .sort-wrap .sort-list .item span {
+    height: 35px;
+    background-position: 42px 16px;
+  }
 }
+
