--- a/src/view/myserver.html
+++ b/src/view/myserver.html
@@ -47,6 +47,38 @@
                     <button class="btn btn-default">评价</button>
                   </div>
                 </div>
+                <div class="clearfix item">
+                  <div class="detail clearfix">
+                    <div class="pull-left img">
+                      <img src="<%= require('../image/avatar.png') %>" alt="avatar" width="100%">
+                    </div>
+                    <div class="info pull-left">
+                      <p class="name text-overflow">管道修理</p>
+                      <p class="money">￥4000/月</p>
+                      <p class="phone">13312341234</p>
+                    </div>
+                  </div>
+                  <div class="cancle clearfix text-right">
+                    <button class="btn btn-default">确认服务</button>
+                    <button class="btn btn-default">评价</button>
+                  </div>
+                </div>
+                <div class="clearfix item">
+                  <div class="detail clearfix">
+                    <div class="pull-left img">
+                      <img src="<%= require('../image/avatar.png') %>" alt="avatar" width="100%">
+                    </div>
+                    <div class="info pull-left">
+                      <p class="name text-overflow">管道修理</p>
+                      <p class="money">￥4000/月</p>
+                      <p class="phone">13312341234</p>
+                    </div>
+                  </div>
+                  <div class="cancle clearfix text-right">
+                    <button class="btn btn-default">确认服务</button>
+                    <button class="btn btn-default">评价</button>
+                  </div>
+                </div>
               </div>
             </div>
             <div class="swiper-slide">
