--- a/src/view/comment.html
+++ b/src/view/comment.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
+
 <head>
   <%= require('html-loader!./layout/html-common1.html') %>
-  <link href="https://cdn.bootcss.com/raty/2.8.0/jquery.raty.min.css" rel="stylesheet">
-  <link href="https://cdn.bootcss.com/webuploader/0.1.1/webuploader.css" rel="stylesheet">
-  <title><%= htmlWebpackPlugin.options.title%></title>
+    <link href="https://cdn.bootcss.com/raty/2.8.0/jquery.raty.min.css" rel="stylesheet">
+    <link href="https://cdn.bootcss.com/webuploader/0.1.1/webuploader.css" rel="stylesheet">
+    <title>
+      <%= htmlWebpackPlugin.options.title%>
+    </title>
 </head>
+
 <body>
   <div class="top top-wrap my-top bg-grey">
     <a class="back" href="javascript:void(0);" onclick="window.history.back()"></a>
@@ -33,39 +37,68 @@
       <div id="star" class="star-container"></div>
     </div>
   </div>
-
   <%= require('html-loader!./layout/userFooter.html') %>
   <%= require('html-loader!./layout/footer1.html') %>
   <script src="https://cdn.bootcss.com/raty/2.8.0/jquery.raty.min.js"></script>
   <script src="https://cdn.bootcss.com/webuploader/0.1.1/webuploader.min.js"></script>
   <script>
-    $('#star').raty({
-      starOff : 'https://cdn.bootcss.com/raty/2.8.0/images/star-off.png',
-      starOn  : 'https://cdn.bootcss.com/raty/2.8.0/images/star-on.png'
-    });
+  $('#star').raty({
+    starOff: 'https://cdn.bootcss.com/raty/2.8.0/images/star-off.png',
+    starOn: 'https://cdn.bootcss.com/raty/2.8.0/images/star-on.png'
+  });
+  var $list = $('#fileList');
+  var uploader = WebUploader.create({
 
-    var uploader = WebUploader.create({
+    // 选完文件后，是否自动上传。
+    auto: true,
 
-      // 选完文件后，是否自动上传。
-      auto: true,
+    // swf文件路径
+    swf: 'https://cdn.bootcss.com/webuploader/0.1.1/Uploader.swf',
 
-      // swf文件路径
-      swf: 'https://cdn.bootcss.com/webuploader/0.1.1/Uploader.swf',
+    // 文件接收服务端。
+    server: 'http://webuploader.duapp.com/server/fileupload.php',
 
-      // 文件接收服务端。
-      server: 'http://webuploader.duapp.com/server/fileupload.php',
+    // 选择文件的按钮。可选。
+    // 内部根据当前运行是创建，可能是input元素，也可能是flash.
+    pick: '#filePicker',
 
-      // 选择文件的按钮。可选。
-      // 内部根据当前运行是创建，可能是input元素，也可能是flash.
-      pick: '#filePicker',
+    // 只允许选择图片文件。
+    accept: {
+      title: 'Images',
+      extensions: 'gif,jpg,jpeg,bmp,png',
+      mimeTypes: 'image/*'
+    },
+    resize: true,
+    fileNumLimit: 6, //限制上传个数
+    fileSingleSizeLimit: 1024000 //限制单个上传图片的大小 1M
+  });
+  uploader.on('fileQueued', function(file) {
+    var $li = $(
+        '<div id="' + file.id + '" class="file-item thumbnail">' +
+        '<img>' +
+        '<div class="info">' + file.name + '</div>' +
+        '</div>'
+      ),
+      $img = $li.find('img');
 
-      // 只允许选择图片文件。
-      accept: {
-        title: 'Images',
-        extensions: 'gif,jpg,jpeg,bmp,png',
-        mimeTypes: 'image/*'
+
+    // $list为容器jQuery实例
+    $list.append($li);
+
+    // 创建缩略图
+    // 如果为非图片文件，可以不用调用此方法。
+    // thumbnailWidth x thumbnailHeight 为 100 x 100
+    var thumbnailWidth = thumbnailHeight = 100;
+    uploader.makeThumb(file, function(error, src) {
+      if (error) {
+        $img.replaceWith('<span>不能预览</span>');
+        return;
       }
-    });
+
+      $img.attr('src', src);
+    }, thumbnailWidth, thumbnailHeight);
+  });
   </script>
 </body>
+
 </html>
